--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,12 +1,14 @@
 
 .container {
-    margin: auto;
+    margin:auto;
     max-width: 500px;
-    font-family: sans-Serif; 
+    font-family: sans-Serif;
+    justify-content: left; 
 }
 
 .heading {
     color:darkslategray;
+    font:xx-large;
 
 }
 
@@ -26,3 +28,10 @@
     color:blueviolet;
 }
 
+.site-title {
+    color:cadetblue;
+    font:italic;
+    font-size: 3rem;
+    font-weight: 700;
+    margin: 3rem, 0;
+}
