--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,37 +1,113 @@
 
+body {
+    background-color: #DF643F;
+    width: 100%;
+    height:100%;
+}
+
 .container {
     margin:auto;
-    max-width: 500px;
     font-family: sans-Serif;
-    justify-content: left; 
+    justify-content:center;
+    display: flex;
+    margin-top: 5rem;
+    max-width: 750px;
 }
 
 .heading {
     color:darkslategray;
-    font:xx-large;
+    font-size: 2.5rem;
+    font-weight: 500;    
+}
 
+.special-text {
+    color:black;
+    font-size: 1.5rem;
+    font-weight: 400;
+    font-style: italic;
 }
 
 .nav-links {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 216px;
+    margin: 0;
+    padding-top: 1rem;
+    padding-right: 3rem;
+    padding-left: 0;
+    background-color: #3D1F1D;
+    width: calc(100% - 216px);
+    height: 2.5rem;
     display: flex;
     list-style: none;
-    padding-left: 0;
+    text-decoration: none;
+    justify-content: right; 
+    
 }
 
 .nav-link-item {
     padding-right: 2rem;
+    text-decoration: none;
 }
 
 .nav-link-text {
-    font-size: larger;
+    font-size: 1.5rem;
     font: bold;
-    color:blueviolet;
+    color:white;
+    text-decoration: none;
 }
 
 .site-title {
-    color:cadetblue;
-    font:italic;
     font-size: 3rem;
     font-weight: 700;
-    margin: 3rem, 0;
+}
+
+.side-bar {
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 200px;
+    background-color: #3D1F1D;
+    color: white;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    text-decoration: none;
+    display: block;
+}
+
+.profile-photo {
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 4px;
+    border-color: white;
+    margin-bottom: 1rem;
+}
+
+.side-bar-nav-link {
+    padding-top: 1rem;
+    padding-bottom: 0rem;
+    color: white;
+    font-size: 1.5rem;
+    text-decoration: none;
+    display: block;
+}
+
+.paragraph {
+    line-height: 2;
+}
+
+.download {
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+}
+
+.button {
+    background-color: darkslategray;
+    text-align: center;
+    text-decoration: none;
+    padding: 15px 32px;
 }
