updated colors, added about paragraph

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,27 +1,27 @@
 
 body {
-    background-color: #DF643F;
+    background-color: #254E58;
     width: 100%;
     height:100%;
 }
 
 .container {
     margin:auto;
-    font-family: sans-Serif;
+    font-family: Georgia, serif;
     justify-content:center;
     display: flex;
     margin-top: 5rem;
-    max-width: 750px;
+    max-width: 800px;
 }
 
 .heading {
-    color:darkslategray;
-    font-size: 2.5rem;
+    color: #e85a4f;
+    font-size: 2.7rem;
     font-weight: 500;    
 }
 
 .special-text {
-    color:black;
+    color:white;
     font-size: 1.5rem;
     font-weight: 400;
     font-style: italic;
@@ -36,13 +36,14 @@ body {
     padding-top: 1rem;
     padding-right: 3rem;
     padding-left: 0;
-    background-color: #3D1F1D;
+    background-color: #112D32;
     width: calc(100% - 216px);
     height: 2.5rem;
     display: flex;
     list-style: none;
     text-decoration: none;
     justify-content: right; 
+    box-shadow: 0px 5px 5px #88bdbc;
     
 }
 
@@ -70,12 +71,14 @@ body {
     left: 0;
     height: 100%;
     width: 200px;
-    background-color: #3D1F1D;
+    background-color: #112D32;
     color: white;
     padding-top: 1rem;
     padding-left: 1rem;
     text-decoration: none;
     display: block;
+    box-shadow: 5px 3.7rem 5px #88bdbc;
+
 }
 
 .profile-photo {
@@ -97,16 +100,19 @@ body {
 
 .paragraph {
     line-height: 2;
+    color: white;
+    font-size: 1.2rem;
+    word-spacing: 8px;
 }
 
 .download {
     text-decoration: none;
-    color: white;
+    color: black;
     font-size: 1rem;
 }
 
 .button {
-    background-color: darkslategray;
+    background-color: white;
     text-align: center;
     text-decoration: none;
     padding: 15px 32px;
