--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -6,18 +6,18 @@ body {
 }
 
 .container {
-    margin:auto;
+    margin: auto;
     font-family: Georgia, serif;
-    justify-content:center;
+    justify-content: center;
     display: flex;
     margin-top: 5rem;
-    max-width: 800px;
+    max-width: 750px;
 }
 
 .heading {
     color: #e85a4f;
     font-size: 2.7rem;
-    font-weight: 500;    
+    font-weight: 500;  
 }
 
 .special-text {
@@ -102,7 +102,7 @@ body {
     line-height: 2;
     color: white;
     font-size: 1.2rem;
-    word-spacing: 8px;
+    word-spacing: 6px;
 }
 
 .download {
@@ -112,8 +112,7 @@ body {
 }
 
 .button {
-    background-color: white;
+    background-color: #88bdbc;
     text-align: center;
-    text-decoration: none;
     padding: 15px 32px;
 }
