--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -31,29 +31,36 @@ body {
     position: fixed;
     z-index: 1;
     top: 0;
-    left: 216px;
+    left: 0;
+    right: 0;
     margin: 0;
-    padding-top: 1rem;
-    padding-right: 3rem;
-    padding-left: 0;
-    background-color: #112D32;
-    width: calc(100% - 216px);
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
+    padding-right: 5rem;
+    padding-left: 5rem;
+    width: 100% - 10rem;
     height: 2.5rem;
     display: flex;
     list-style: none;
-    text-decoration: none;
-    justify-content: right; 
-    box-shadow: 0px 5px 5px #88bdbc;
-    
+    justify-content: flex-end; 
+}
+
+.nav-button {
+    margin-right: 1rem;
+    text-align: center;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    background-color: #112D32;
+    border: none;
 }
 
 .nav-link-item {
-    padding-right: 2rem;
     text-decoration: none;
 }
 
 .nav-link-text {
     font-size: 1.5rem;
+    font-family: Georgia, serif;
     font: bold;
     color:white;
     text-decoration: none;
@@ -77,7 +84,7 @@ body {
     padding-left: 1rem;
     text-decoration: none;
     display: block;
-    box-shadow: 5px 3.7rem 5px #88bdbc;
+    box-shadow: 5px 0 5px #88bdbc;
 
 }
 
@@ -115,4 +122,5 @@ body {
     background-color: #88bdbc;
     text-align: center;
     padding: 15px 32px;
+    border: none;
 }
