--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -8,8 +8,7 @@ body {
 .container {
     margin: auto;
     font-family: Georgia, serif;
-    justify-content: center;
-    display: flex;
+    justify-content: flex-end;
     margin-top: 5rem;
     max-width: 750px;
 }
@@ -18,6 +17,7 @@ body {
     color: #e85a4f;
     font-size: 2.7rem;
     font-weight: 500;  
+    padding-top: 1rem;
 }
 
 .special-text {
@@ -110,6 +110,7 @@ body {
     color: white;
     font-size: 1.2rem;
     word-spacing: 6px;
+    padding-bottom: 3rem;
 }
 
 .download {
@@ -123,4 +124,19 @@ body {
     text-align: center;
     padding: 15px 32px;
     border: none;
+}
+
+.checklist {
+    position: fixed;
+    z-index: 3;
+    bottom:30%;
+    left: 0;
+    color: white;
+    font-size: 1rem;
+    padding-left: 1rem;
+    line-height: 2;
+}
+
+.checklistTitle {
+    color: #e85a4f;
 }
