--- a/src/components/ticTacToe/ticTacToe.module.css
+++ b/src/components/ticTacToe/ticTacToe.module.css
@@ -3,13 +3,13 @@ ol, ul {
   padding-left: 30px;
 }
 
-.board-row:after {
+.boardRow:after{
   clear: both;
   content: "";
   display: table;
 }
 
-.status {
+.gameStatus {
   margin-bottom: 20px;
   color:steelblue;
   font-weight: bold;
@@ -22,11 +22,11 @@ ol, ul {
   background: transparent;
   border: 5px solid black;
   float: left;
-  font-size: 300px;
+  font-size: 230px;
   font-weight: bold;
   line-height: 30px;
-  height: 300px;
-  width: 300px;
+  height: 230px;
+  width: 230px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
