--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -13,6 +13,12 @@ body {
     max-width: 700px;
 }
 
+@media screen and (max-width: 1200px) {
+    .container {
+        margin-left: 270px;
+    }
+}
+
 .heading {
     color: #e85a4f;
     font-size: 2.7rem;
@@ -129,8 +135,8 @@ body {
 .checklist {
     position: fixed;
     z-index: 3;
-    top: 40%;
-    right: 0;
+    top: 45%;
+    left: 0;
     padding-right: 1.5rem;
     color: white;
     font-size: 1rem;
@@ -140,4 +146,22 @@ body {
 
 .checklistTitle {
     color: #e85a4f;
+}
+
+.grid-container {
+    display: grid;
+    column-gap: 50px;
+    row-gap: 50px;
+    max-width: 600px;
+
+}
+
+.grid-item {
+    color: black;
+    border: black;
+    border-style: solid;
+    padding: 60px;
+    margin-left: 100px;
+   
+
 }
