--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -135,13 +135,15 @@ body {
 .checklist {
     position: fixed;
     z-index: 3;
-    top: 45%;
-    left: 0;
-    padding-right: 1.5rem;
     color: white;
     font-size: 1rem;
-    padding-left: 1rem;
     line-height: 2;
+    bottom: 0;
+    left: 0;
+    padding-right: 1.5rem;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
+    
 }
 
 .checklistTitle {
