--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -29,56 +29,24 @@ body {
     padding-top: 1rem;
 }
 
+.buttonGroup {
+    overflow: hidden;
+    background-color: #112D32;
+}
+
+.buttonGroupHeader{
+    background-color: #112D32;
+}
+
+.pageButton{
+    color: #112D32;
+}
+
 .special-text {
-    color:white;
+    color: white;
     font-size: 1.5rem;
     font-weight: 400;
     font-style: italic;
-}
-
-.nav-links {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    right: 0;
-    margin: 0;
-    padding-top: 1.5rem;
-    padding-bottom: 1rem;
-    padding-right: 5rem;
-    padding-left: 5rem;
-    width: 100% - 10rem;
-    height: 2.5rem;
-    display: flex;
-    list-style: none;
-    justify-content: flex-end; 
-
-}
-
-.nav-button {
-    margin-right: 1rem;
-    text-align: center;
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
-    background-color: #112D32;
-    border: none;
-    
-}
-
-.nav-button:hover {
-    background-color: #e85a4f;
-}
-
-.nav-link-item {
-    text-decoration: none;
-}
-
-.nav-link-text {
-    font-size: 1.5rem;
-    font-family: Georgia, serif;
-    font: bold;
-    color:white;
-    text-decoration: none;
 }
 
 .site-title {
@@ -100,7 +68,6 @@ body {
     text-decoration: none;
     display: block;
     box-shadow: 5px 0 5px #88bdbc;
-
 }
 
 .profile-photo {
@@ -141,32 +108,12 @@ body {
     border: none;
 }
 
-.checklist {
-    position: fixed;
-    z-index: 3;
-    color: white;
-    font-size: 1rem;
-    line-height: 2;
-    bottom: 0;
-    left: 0;
-    padding-right: 1.5rem;
-    padding-left: 1rem;
-    padding-bottom: 1rem;
-    
-}
-
-.checklistTitle {
-    color: #e85a4f;
-    margin: auto;
-}
-
 .grid-container {
     display: grid;
     column-gap: 50px;
     row-gap: 50px;
     max-width: 600px;
     grid-auto-rows: 1fr;
-
 }
 
 .grid-item {
@@ -177,7 +124,6 @@ body {
     padding: 20px;
     margin-left: 100px;
     display:flex;
-
 }
 
 .grid-subcolumn {
@@ -193,7 +139,6 @@ body {
     color: white;
     border-style: solid;
     text-align: center;
-    
 }
 
 .project-nav-link-text {
@@ -202,5 +147,8 @@ body {
     font: bold;
     text-decoration: none;
     color: white;
-    
+}
+
+.accordian {
+    padding: 50px;
 }
