--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -124,7 +124,7 @@ body {
     column-gap: 50px;
     row-gap: 50px;
     max-width: 600px;
-    grid-auto-rows: 1fr;
+    grid-auto-rows: auto;
 }
 
 .grid-item {
@@ -135,6 +135,8 @@ body {
     padding: 20px;
     margin-left: 100px;
     display:flex;
+    width: auto;
+    height: fit-content;
 }
 
 .grid-subcolumn {
